namespace Barnabas.Domain.Members;

public enum MemberRole
{
    Member = 0,
    Moderator = 1,
    Administrator = 2,
}
