@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Designate moderators
class Member {
  +Guid Id
  +Guid CongregationId
  +MemberStatus Status
  +MemberRole Role
}
enum MemberRole {
  Member
  Moderator
  Administrator
}
class DesignateModeratorCommand <<planned>> {
  +Guid CongregationId
  +Guid MemberId
}
class DesignateModeratorCommandHandler <<planned>> {
  +Handle(command: DesignateModeratorCommand): Task<MemberRole>
}
Member --> MemberRole : holds
DesignateModeratorCommandHandler ..> DesignateModeratorCommand : handles
DesignateModeratorCommandHandler --> Member : grants role in congregation
@enduml
